// Schéma de données v1 — Imposteur Foot : comptes + historique + premium
//
// Portée volontairement réduite à ce qui a été décidé : PAS de multijoueur
// en ligne pour l'instant (ce sera une v2 séparée, avec ses propres tables
// game_rooms/game_players). Ici on couvre seulement :
//   1. Les comptes utilisateurs (email, photo de profil)
//   2. L'historique des parties jouées (en local, "hotseat", comme
//      aujourd'hui — juste sauvegardé pour l'utilisateur connecté)
//   3. Le premium par abonnement (3,99€/mois), avec des limites différentes
//      entre gratuit et premium (plus de joueurs, plus de catégories, plus
//      de modes...)
//
// Comment l'utiliser : coller ce fichier tel quel sur https://dbdiagram.io
// (menu Import > DBML, ou juste coller dans l'éditeur) pour voir le schéma
// dessiné avec les flèches de relation. C'est un point de départ à ajuster
// ensemble, pas une version figée.

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar [not null, unique]
  display_name varchar
  avatar_url varchar [note: 'photo de profil, uploadée dans un bucket de stockage (Supabase Storage / Firebase Storage)']
  plan varchar [not null, default: 'free', note: 'copie rapide du plan actif (free/premium) — mise à jour via webhook Stripe, la source de vérité reste la table subscriptions']
  created_at timestamp [not null, default: `now()`]
}

Table subscriptions {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  stripe_customer_id varchar
  stripe_subscription_id varchar
  status varchar [not null, note: 'active / trialing / past_due / canceled / incomplete']
  plan varchar [not null, note: 'free / premium']
  price_cents int [note: 'ex: 399 pour 3,99€']
  current_period_start timestamp
  current_period_end timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  note: 'Historique complet des abonnements — on garde toutes les lignes (pas juste la dernière) pour l\'historique de facturation. Le plan actif = la ligne la plus récente avec status = active/trialing.'
}

Table plan_limits {
  plan varchar [pk, note: 'free / premium']
  max_players int [not null, note: 'ex: 8 en gratuit, 16 en premium']
  unlocked_categories varchar[] [note: 'ex: [EFFECTIF, CLUB] en gratuit, tout en premium']
  unlocked_modes varchar[] [note: 'ex: mode classique seul en gratuit, tous les modes en premium']
  unlocked_eras varchar[] [note: 'ex: une seule génération en gratuit, toutes en premium']

  note: 'Table de config, pas de logique métier dedans — juste les limites, modifiables sans redéployer l\'appli. Alternative plus simple pour un tout premier MVP : coder ces limites en dur côté appli (un objet JS) et ne créer cette table que si on veut pouvoir les changer sans redéployer.'
}

Table game_history {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id, note: 'le compte qui a lancé la partie sur son téléphone']
  category varchar [not null, note: 'EFFECTIF / CLUB(Championnat) / EPOQUE — correspond à CATEGORIES dans game-engine.js']
  championship varchar [note: 'ex: Premier League — rempli seulement si category = Championnat']
  era varchar [note: 'génération choisie, si applicable']
  game_mode varchar [not null, note: 'correspond à GAME_MODES dans game-engine.js']
  num_players int [not null]
  num_infiltrators int [not null]
  has_blank_card boolean [not null, default: false]
  winner_side varchar [note: 'civils / infiltres / blanc / null si partie abandonnée avant la fin']
  played_at timestamp [not null, default: `now()`]
  duration_seconds int
}
